# deeper-agent

./: .cursorignore  .cursorrules  .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: langfuse-setup.md
eval/: EVAL.md
eval/data/: full.yml  retriever.yml
examples/: __init__.py
examples/test_browser_use/: .env-example  test_browser_use.py
examples/test_retriever/: .env-example  test_retriever.py
examples/test_summary/: .env-example  test_summary.py
odr/: __init__.py  factory.py  main.py
odr/agents/: __init__.py  judge_counsel.py  retriever.py  types.py
odr/agents/paper_pipeline/: __init__.py  agent.py  refiner_tools.py
odr/agents/paper_planner/: __init__.py  agent.py  contracts.py  planner.py
odr/agents/research_paper/: __init__.py  agent.py  graph.py  nodes.py  state.py
odr/agents/retriever/: __init__.py  agent.py  contracts.py  graph.py  nodes.py  state.py
odr/agents/retriever/compiler/: __init__.py  contracts.py  node.py  utils.py
odr/agents/retriever/controller/: __init__.py  contracts.py  node.py
odr/agents/retriever/judgment/: __init__.py  node.py
odr/agents/retriever/planner/: __init__.py  contracts.py  node.py  utils.py
odr/agents/retriever/shared/: contracts.py  utils.py
odr/agents/retriever/worker/: __init__.py  node.py
odr/agents/workers/: __init__.py  base.py  browser_use_worker.py  llm_worker.py
odr/integrations/: __init__.py  observability.py
odr/procedures/: __init__.py
odr/tools/: __init__.py  search.py
osint_deep_research/: main.py
osint_deep_research/agents/tools/: __init__.py
osint_deep_research/integrations/: __init__.py
scripts/: generate-langfuse-secrets.sh
tests/: __init__.py  test_browser_use_worker_search_budget.py  test_model_provider_factory.py  test_observe_and_compile_gemini.py  test_paper_pipeline.py  test_retriever.py  test_retriever_contracts.py  test_retriever_evidence_sanitize.py  test_retriever_planner_prompt_scope_lock.py
